// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`brainAtlas render goldens > detail panel: cerebellum (ACCURACY LOCK — ~80%, not 50%) 1`] = `
{
  "buttons": 59,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 152,
  "sha": "6d0bab84166e4f23",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > detail panel: dopamine (ACCURACY LOCK — no "pleasure chemical" overclaim) 1`] = `
{
  "buttons": 61,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 184,
  "sha": "5f798971873f5c69",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > quiz mode renders a question + options 1`] = `
{
  "buttons": 59,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 140,
  "sha": "3212d86b28c37896",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: basalGangliaLoop renders + pins a digest 1`] = `
{
  "buttons": 58,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 182,
  "sha": "3272c1d35fbd9a49",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: brainstemCrossSection renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 164,
  "sha": "495b399469f77488",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cerebellumClinic renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 163,
  "sha": "b7c3f68b9d5cd343",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: cranialNervesWillis renders + pins a digest 1`] = `
{
  "buttons": 63,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 195,
  "sha": "0b5eff46bcb86a69",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: crossLateral renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 176,
  "sha": "86e10219eeab3c8c",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: csfHydrocephalus renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 165,
  "sha": "14eb9feb1033fa5f",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: eegWaves renders + pins a digest 1`] = `
{
  "buttons": 61,
  "canvases": 2,
  "inputs": 1,
  "lengthBucket": 181,
  "sha": "56593bef47ee1e88",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: homunculus renders + pins a digest 1`] = `
{
  "buttons": 56,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 163,
  "sha": "0f40478161b811d0",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: inferior renders + pins a digest 1`] = `
{
  "buttons": 63,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 174,
  "sha": "146d7e380c599880",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: languageNetwork renders + pins a digest 1`] = `
{
  "buttons": 60,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 178,
  "sha": "12daa6395e69656f",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: lateral renders + pins a digest 1`] = `
{
  "buttons": 68,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 197,
  "sha": "f7b1417129c16519",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: limbicPapezLoop renders + pins a digest 1`] = `
{
  "buttons": 61,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 195,
  "sha": "557304821c870a4c",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: medial renders + pins a digest 1`] = `
{
  "buttons": 67,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 192,
  "sha": "bc245476431962e9",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neuron renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 169,
  "sha": "dce7387936d89863",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: neurotransmitters renders + pins a digest 1`] = `
{
  "buttons": 75,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 254,
  "sha": "489ff96fe36629d9",
  "svgs": 1,
}
`;

exports[`brainAtlas render goldens > view: prenatalDevelopment renders + pins a digest 1`] = `
{
  "buttons": 55,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 161,
  "sha": "63eb6ce426d1ee1b",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: sleepStages renders + pins a digest 1`] = `
{
  "buttons": 52,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 161,
  "sha": "f3185bc5ce0f0999",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: stimulate renders + pins a digest 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 171,
  "sha": "2b7a50deb9b09070",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: strokeTerritories renders + pins a digest 1`] = `
{
  "buttons": 54,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 165,
  "sha": "7e87ade21520dd45",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: superior renders + pins a digest 1`] = `
{
  "buttons": 60,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 159,
  "sha": "450392cd5dd7e84d",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: synapses renders + pins a digest 1`] = `
{
  "buttons": 53,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 161,
  "sha": "e005bb47f765b589",
  "svgs": 0,
}
`;

exports[`brainAtlas render goldens > view: visualPathway renders + pins a digest 1`] = `
{
  "buttons": 59,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 177,
  "sha": "e80ee3e3a263d48c",
  "svgs": 0,
}
`;
